--- a/ines.css
+++ b/ines.css
@@ -247,8 +247,93 @@ padding-top: 25px;
 }
 .in-m a:hover{
    color:#3b94d9;
-   
 }
+.in{
+     height: 270px;
+   width: 250px;
+}
+.in a{
+   color: #292f33;
+}
+.date a{
+   float: right;
+   font-size:10px;
+}
+.ar a:hover{
+   color: #3b94d9;
+}
+.im-link :hover{
+background-color: #8ba0972c;
+}
+.apply h2{
+   color: #fff;
+   margin-left: 100px;
+}
+.apply span{
+   color: #fff;
+   margin-left: 20px;
+}
+.apply a{
+   margin-left: 600px;
+   height: 60px;
+   width: 70px;
+   margin-top: 600px;
+   border-radius: 7px 7px 7px 7px 7px;
+}
+.apply{
+   background: rgba(78,79,104,0.90);
+   margin-top: 200px;
+   height: 400px;
+}
+.container{
+   background-color: #22286f;
+   color: white;
+   display: grid;
+   grid-template-columns:repeat(4,1fr);
+   padding: 100px;
+}
+.container span{
+   font-size:70px;
+   font-weight: bold;
+}
+.container a{
+   color: #222845;
+   text-decoration: none;
+   font-size:30px ;
+}
+.seven{
+   background-color: #6f2222;
+   color: white;
+   display: grid;
+   grid-template-columns:repeat(4,1fr);
+   height: 350px;
+   margin-top: 80px;
+   padding: 30px;
+   font-size: 20px;
+}
+.seven a{
+   border: 2px solid white;
+   background-color: #003c5a;
+   margin-top: 100px;
+   text-decoration: none;
+}
+.about{
+   background-color: #6f2222;
+   color: white;
+  
+}
+.learner img{
+   height: 500px;
+}
+.oli{
+   text-align: right;
+   padding-right: 400px;
+   padding-bottom: 900px;
+}
+
+
+
+
 
 
 
