--- a/ines.css
+++ b/ines.css
@@ -6,7 +6,7 @@
 }
 .main{
    width: 1800px;
-   background-color: aqua;
+   
    height: 5800px;
 }
 .one{
@@ -281,10 +281,12 @@ background-color: #8ba0972c;
    border-radius: 7px 7px 7px 7px 7px;
 }
 .apply{
-   background: rgba(78,79,104,0.990);
+   background: rgba(78,79,104,0.090);
    margin-top: 200px;
    height: 400px;
    background-image: url("back.PNG");
+   background-repeat: no-repeat;
+   
 }
 .container{
    background-color: #22286f;
@@ -356,17 +358,75 @@ width: 1500px;
    background-color: #f7f7f7;
    margin-top: 40px;
    color: rgba(0, 0, 0, 0.753);
-   display: grid;
-   grid-template-rows:repeat(3,1fr);
-   height: 500px;
-   width: 1150px;
-   padding-top: 100px;
+   display: flex;
+   flex-direction: row;
+   height: 200px;
+   width: 1000px;
+   grid-gap: 100px;
+   padding-left: 80px;
 }
-.contact h2{
-   text-align: center;
+.h{
+  text-align:center;
+  height: 50px;
+  background-color: #fff;
+  width: 200px;
+  margin-left: 300px;
+  margin-top: 50px;
+  color: #3d425c;
+}
+form input[type=text]{
+   border: none;
+}
+.icon{
+   
+   display: flex;
+   flex-direction: row;
+   grid-gap: 20px;
+   padding-left: 200px;
+   width: 600px;
+}
+.icon a:hover{
+   color: yellow;
+}
+.icon a{
+   color: #7176802c;
+}
+.eight{
+   background-color: #003c5a;
+   color: #fff;
+   padding-left: 50px;
+   display: flex;
+   flex-direction: row;
+}
+.eight span{
+   padding-left: 250px;
+   color: whitesmoke
+}
+.quick a{
+ text-decoration: none;
+ color: #fff;
+}
+.final{
+   
+   margin-top: 350px;
+}
+.final a{
+   text-decoration: none;
+   color: rgb(255, 217, 0);
+}
+.explorar{
+background-color: #003c5a;
+}
+.appl{
+   background-color: #003c5a ; 
+}
+.admission{
+   background-color:#21546e;
 }
 
-  
+
+   
+   
 
 
 
